# ts-unused-symbols

./: Cargo.toml  readme.md
.github/workflows/: ci.yaml
example/src/: another-package.js  example.js  example.ts
src/: analyze_file.rs  analyze_package.rs  analyze_plan.rs  analyze_symbols_usage.rs  analyzed_module.rs  analyzer.rs  find_unused_exports.rs  find_unused_symbols.rs  main.rs  module_symbols.rs  package_json.rs  resolve_import_path.rs  source_map.rs  tsconfig.rs
tests/default-imports/: app.tsx
tests/namespace-imports/src/: another.ts  app.ts
tests/reexported-symbols/src/: app.ts
tests/relative-imports/sub-dir/: module.ts
