[package]
name = "ts-unused-symbols"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "4.1.9", features = ["derive"] }
swc_common = "0.29.37"
swc_ecma_ast = "0.100.1"
swc_ecma_parser = { version = "0.130.2", features = ["typescript"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
